--- a/www/css/app.css
+++ b/www/css/app.css
@@ -8,9 +8,9 @@ html, body {
 	overflow: hidden;
 	height:100%;
 }
+h4.mdl-dialog__title {font-size:24px}
 
-
-#stage, 
+#stage,
 #back,
 #grid {
 	position:absolute;
@@ -19,17 +19,17 @@ html, body {
 	height:100%;
 }
 
-#back { 
+#back {
   background:#eeeeee;
   opacity:0.7;
-  
+
   /*
-  filter: url("data:image/svg+xml;utf8,<svg xmlns=\'http://www.w3.org/2000/svg\'><filter id=\'grayscale\'><feColorMatrix type=\'matrix\' values=\'0.3333 0.3333 0.3333 0 0 0.3333 0.3333 0.3333 0 0 0.3333 0.3333 0.3333 0 0 0 0 0 1 0\'/></filter></svg>#grayscale"); /* Firefox 3.5+ 
-  filter: gray;  IE6-9 
-  -webkit-filter: grayscale(100%); /* Chrome 19+ & Safari 6+ 
-  
+  filter: url("data:image/svg+xml;utf8,<svg xmlns=\'http://www.w3.org/2000/svg\'><filter id=\'grayscale\'><feColorMatrix type=\'matrix\' values=\'0.3333 0.3333 0.3333 0 0 0.3333 0.3333 0.3333 0 0 0.3333 0.3333 0.3333 0 0 0 0 0 1 0\'/></filter></svg>#grayscale"); /* Firefox 3.5+
+  filter: gray;  IE6-9
+  -webkit-filter: grayscale(100%); /* Chrome 19+ & Safari 6+
+
   */
-  
+
 }
 svg {background:none}
 
