--- a/www/css/app.css
+++ b/www/css/app.css
@@ -34,7 +34,12 @@ svg {background:none}
 }
 
 .top-nav {
-	position:absolute;top:65px;right:2%;z-index:10000;
+	position:absolute;top:75px;right:42px;z-index:10000;
+}
+@media screen and (max-width:1024px) {
+	.top-nav {
+		top:8px;
+	}
 }
 
 
